--- a/main.html
+++ b/main.html
@@ -170,6 +170,107 @@
 			.catch(error => console.log(error));
 
 		}
+		// Generate QR Code
+		function qrCodeGenericPostLink() {
+
+			let url = document.getElementById("genericPostLink").value;
+
+			const options = {
+				method: 'POST',
+				headers: {
+					'content-type': 'application/json',
+					'X-RapidAPI-Key': '0759e0a5f5msh13ea66780939408p189da2jsne987576d688f',
+					'X-RapidAPI-Host': 'qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com'
+				},
+				body: '{"data":"' + url + '","size":200,"margin":0,"color":"#F4511E","colorAlpha":100,"backgroundColor":"#FFFFFF","backgroundColorAlpha":100,"eyeOneInnerColor":"#F57C00","eyeOneOuterColor":"#B71C1C","eyeTwoInnerColor":"#F57C00","eyeTwoOuterColor":"#B71C1C","eyeThreeInnerColor":"#F57C00","eyeThreeOuterColor":"#B71C1C","eyeStyle":"circle","blockStyle":"round","errorCorrectionLevel":"Q","encoding":"UTF-8"}'
+			};
+
+			fetch('https://qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com/?action=simple', options)
+			.then(response => response.json())
+			.then(data => document.getElementById("genericPostLinkQRPreview").src = data.qrcode)
+			.catch(err => console.error(err));
+
+		}
+		function qrCodeCompanyUpdateLink() {
+
+			let url = document.getElementById("companyUpdateLink").value;
+
+			const options = {
+				method: 'POST',
+				headers: {
+					'content-type': 'application/json',
+					'X-RapidAPI-Key': '0759e0a5f5msh13ea66780939408p189da2jsne987576d688f',
+					'X-RapidAPI-Host': 'qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com'
+				},
+				body: '{"data":"' + url + '","size":200,"margin":0,"color":"#F4511E","colorAlpha":100,"backgroundColor":"#FFFFFF","backgroundColorAlpha":100,"eyeOneInnerColor":"#F57C00","eyeOneOuterColor":"#B71C1C","eyeTwoInnerColor":"#F57C00","eyeTwoOuterColor":"#B71C1C","eyeThreeInnerColor":"#F57C00","eyeThreeOuterColor":"#B71C1C","eyeStyle":"circle","blockStyle":"round","errorCorrectionLevel":"Q","encoding":"UTF-8"}'
+			};
+
+			fetch('https://qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com/?action=simple', options)
+			.then(response => response.json())
+			.then(data => document.getElementById("companyUpdateLinkQRPreview").src = data.qrcode)
+			.catch(err => console.error(err));
+
+		}
+		function qrCodeSalePromotionLink() {
+
+			let url = document.getElementById("salePromotionLink").value;
+
+			const options = {
+				method: 'POST',
+				headers: {
+					'content-type': 'application/json',
+					'X-RapidAPI-Key': '0759e0a5f5msh13ea66780939408p189da2jsne987576d688f',
+					'X-RapidAPI-Host': 'qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com'
+				},
+				body: '{"data":"' + url + '","size":200,"margin":0,"color":"#F4511E","colorAlpha":100,"backgroundColor":"#FFFFFF","backgroundColorAlpha":100,"eyeOneInnerColor":"#F57C00","eyeOneOuterColor":"#B71C1C","eyeTwoInnerColor":"#F57C00","eyeTwoOuterColor":"#B71C1C","eyeThreeInnerColor":"#F57C00","eyeThreeOuterColor":"#B71C1C","eyeStyle":"circle","blockStyle":"round","errorCorrectionLevel":"Q","encoding":"UTF-8"}'
+			};
+
+			fetch('https://qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com/?action=simple', options)
+			.then(response => response.json())
+			.then(data => document.getElementById("salePromotionLinkQRPreview").src = data.qrcode)
+			.catch(err => console.error(err));
+
+		}
+		function qrCodeEventPromotionLink() {
+
+			let url = document.getElementById("eventPromotionLink").value;
+
+			const options = {
+				method: 'POST',
+				headers: {
+					'content-type': 'application/json',
+					'X-RapidAPI-Key': '0759e0a5f5msh13ea66780939408p189da2jsne987576d688f',
+					'X-RapidAPI-Host': 'qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com'
+				},
+				body: '{"data":"' + url + '","size":200,"margin":0,"color":"#F4511E","colorAlpha":100,"backgroundColor":"#FFFFFF","backgroundColorAlpha":100,"eyeOneInnerColor":"#F57C00","eyeOneOuterColor":"#B71C1C","eyeTwoInnerColor":"#F57C00","eyeTwoOuterColor":"#B71C1C","eyeThreeInnerColor":"#F57C00","eyeThreeOuterColor":"#B71C1C","eyeStyle":"circle","blockStyle":"round","errorCorrectionLevel":"Q","encoding":"UTF-8"}'
+			};
+
+			fetch('https://qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com/?action=simple', options)
+			.then(response => response.json())
+			.then(data => document.getElementById("eventPromotionLinkQRPreview").src = data.qrcode)
+			.catch(err => console.error(err));
+
+		}
+		function qrCodeTestimonialReviewLink() {
+
+			let url = document.getElementById("testimonialReviewLink").value;
+
+			const options = {
+				method: 'POST',
+				headers: {
+					'content-type': 'application/json',
+					'X-RapidAPI-Key': '0759e0a5f5msh13ea66780939408p189da2jsne987576d688f',
+					'X-RapidAPI-Host': 'qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com'
+				},
+				body: '{"data":"' + url + '","size":200,"margin":0,"color":"#F4511E","colorAlpha":100,"backgroundColor":"#FFFFFF","backgroundColorAlpha":100,"eyeOneInnerColor":"#F57C00","eyeOneOuterColor":"#B71C1C","eyeTwoInnerColor":"#F57C00","eyeTwoOuterColor":"#B71C1C","eyeThreeInnerColor":"#F57C00","eyeThreeOuterColor":"#B71C1C","eyeStyle":"circle","blockStyle":"round","errorCorrectionLevel":"Q","encoding":"UTF-8"}'
+			};
+
+			fetch('https://qr-code-generator-with-logo-and-color-fancyqr.p.rapidapi.com/?action=simple', options)
+			.then(response => response.json())
+			.then(data => document.getElementById("testimonialReviewLinkQRPreview").src = data.qrcode)
+			.catch(err => console.error(err));
+
+		}
 	</script>
 
 	<!-- HTML2Canvas Screenshot Capture -->
@@ -1703,7 +1804,7 @@
 			<div>
 				<button class="socialTab" onclick="openCity(event, 'TitleTab'); document.getElementById('inputEventTitle').focus();">Title<span id="tabExclamationTitle" class="material-symbols-outlined">exclamation</span><span id="tabDoneTitle" class="material-symbols-outlined" style="display: none;">done</span></button>
 				<button class="socialTab" onclick="openCity(event, 'DateTab'); document.getElementById('inputEventDate').focus();">Date<span id="tabExclamationDate" class="material-symbols-outlined">exclamation</span><span id="tabDoneDate" class="material-symbols-outlined" style="display: none;">done</span></button>
-				<button class="socialTab" onclick="openCity(event, 'TimeTab');  document.getElementById('inputEventTime').focus();">Time<span id="tabExclamationTime" class="material-symbols-outlined">exclamation</span><span id="tabDoneTime" class="material-symbols-outlined" style="display: none;">done</span></button>
+				<button class="socialTab" onclick="openCity(event, 'TimeTab'); document.getElementById('inputEventTime').focus();">Time<span id="tabExclamationTime" class="material-symbols-outlined">exclamation</span><span id="tabDoneTime" class="material-symbols-outlined" style="display: none;">done</span></button>
 				<button class="socialTab" onclick="openCity(event, 'LocationTab'); document.getElementById('inputEventLocation').focus();">Location<span id="tabExclamationLocation" class="material-symbols-outlined">exclamation</span><span id="tabDoneLocation" class="material-symbols-outlined" style="display: none;">done</span></button>
 				<button class="socialTab" onclick="openCity(event, 'OrganizationTab'); document.getElementById('inputEventOrganization').focus();">Organization<span id="tabExclamationOrganization" class="material-symbols-outlined">exclamation</span><span id="tabDoneOrganization" class="material-symbols-outlined" style="display: none;">done</span></button>
 				<button class="socialTab" onclick="openCity(event, 'HostTab');  document.getElementById('inputEventHost').focus();">Host<span id="tabDescriptionHost" class="material-symbols-outlined">exclamation</span><span id="tabDoneHost" class="material-symbols-outlined" style="display: none;">done</span></button>
